# OpenEIT

./: app.py  pyproject.toml  uart_service.py
OpenEIT/backend/: serialhandler.py
sandbox/: uart_service.py
