[tool.poetry]
name = "eit_dash"
version = "0.1.0"
description = "Dashboard for real-time Electrical Impedance Tomography."
authors = ["Jean Rintoul <jean@mindseyebiomedical.com>"]
license = "CC-BY-NC-SA-4.0"

[tool.poetry.dependencies]
python = "^3.6.7"
imageio = "2.4.1"
matplotlib = "~2.2"
numpy = "1.16.2"
pyserial = "3.4"
scikit-image = "0.14.2"
scipy = "1.2.1"
six = "1.11.0"
Adafruit-BluefruitLE = "0.9.10"
dash = "0.42.0"
pyobjc = "5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
